--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -17,10 +17,16 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
+} */
+
+@theme {
+  --color-primary-500: #2188ff;
+  --color-primary-600: rgb(37, 99, 235);
+  --color-primary-900: #023b78;
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Inter, Arial, Helvetica, sans-serif;
 }
