--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,7 @@
 } */
 
 @theme {
+  --color-primary-50: #f2f8ff;
   --color-primary-100: #d0e2ff;
   --color-primary-200: #89b5ff;
   --color-primary-500: #2188ff;
